<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".FourthFragment">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/label_back_to_screen_3"
        android:id="@+id/back_to_screen_3"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_masukkan_usia"
        android:textSize="33sp"
        android:layout_above="@id/back_to_screen_3"
        android:background="@drawable/custom_background_edit_text"
        android:inputType="text"
        android:padding="3dp"
        android:importantForAutofill="no"
        android:id="@+id/screen_4_input_usia"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_masukkan_alamat"
        android:textSize="33sp"
        android:importantForAutofill="no"
        android:layout_above="@id/screen_4_input_usia"
        android:background="@drawable/custom_background_edit_text"
        android:inputType="text"
        android:padding="3dp"
        android:id="@+id/screen_4_input_alamat"
        android:layout_marginTop="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/label_masukkan_pekerjaan"
        android:textSize="33sp"
        android:layout_above="@id/screen_4_input_alamat"
        android:background="@drawable/custom_background_edit_text"
        android:inputType="text"
        android:padding="3dp"
        android:id="@+id/screen_4_input_pekerjaan" />
</RelativeLayout>