<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ThirdFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen_3"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_output"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:id="@+id/output"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_go_to_screen_4"
        android:textColor="@color/black"
        android:paddingHorizontal="8dp"
        android:textSize="20sp"
        android:id="@+id/go_to_screen_4"
        android:layout_below="@id/output"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>