<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SecondFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen_2"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:id="@+id/screen_2_input_nama"
        android:inputType="text"
        android:hint="@string/label_masukkan_nama"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="8dp"
        android:textSize="33sp"
        android:layout_above="@id/go_to_screen_3"
        android:background="@drawable/custom_background_edit_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_go_to_screen_3"
        android:textColor="@color/black"
        android:paddingHorizontal="8dp"
        android:textSize="20sp"
        android:id="@+id/go_to_screen_3"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>
</RelativeLayout>